# ascii-player

./: CMakeLists.txt  main.cpp
assets/: testEarth.mp4:Zone.Identifier
include/: AsciiEngine.h  ConfigManager.h  Tui.h
include/core/: AsciiEngine.h  ConfigManager.h
include/strategies/: BaseGrayscaleStrategy.h  IRenderStrategy.h  LightnessGrayscaleStrategy.h  NaiveGrayscaleStrategy.h  PerceptualGrayscaleStrategy.h  SobelEdgeDetectionStrategy.h  StrategiesFactory.h
include/strategies/EdgeDetections/: BaseEdgeDetectionStrategy.h  CannyEdgeDetectionStrategy.h  SobelEdgeDetectionStrategy.h
include/strategies/Grayscale/: BaseGrayscaleStrategy.h  NaiveGrayscaleStrategy.h  ValueGrayscaleStrategy.h
include/ui/: SettingsScreen.h  Tui.h
src/: AsciiEngine.cpp  Tui.cpp  main.cpp
src/core/: AsciiEngine.cpp
src/strategies/: BaseGrayscaleStrategy.cpp
src/ui/: SettingsScreen.cpp  Tui.cpp
